@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-9
-Date: 2013-06-17
+Version: 0.5-9.1
+Date: 2013-07-10
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at"),
              person("Kurt", "Hornik", role = "aut"))
@@ -9,7 +9,7 @@ Depends: R (>= 2.14.0), methods
 Imports: parallel, slam (>= 0.1-22)
 Suggests: filehash, proxy, Rgraphviz, SnowballC, XML
 SystemRequirements: Antiword (http://www.winfield.demon.nl/) for reading MS Word files,
-  pdftotext from Poppler (http://poppler.freedesktop.org/) for reading PDF
+  pdfinfo and pdftotext from Poppler (http://poppler.freedesktop.org/) for reading PDF
 Description: A framework for text mining applications within R.
 License: GPL (>= 2)
 URL: http://tm.r-forge.r-project.org/
