@@ -28,3 +28,34 @@ map_IETF_Snowball <- function(code) {
 
     names[charmatch(gsub("-.*", "", code), codes)]
 }
+
+pdfinfo <- function(file) {
+    outfile <- tempfile("pdfinfo")
+    on.exit(unlink(outfile))
+    status <- system2("pdfinfo", shQuote(normalizePath(file)),
+                      stdout = outfile)
+    ## Could check the status ...
+    ## This does not work ...
+    ##   info <- as.list(read.dcf(outfile)[1L, ])
+
+    tags <- c("Title", "Subject", "Keywords", "Author", "Creator",
+              "Producer", "CreationDate", "ModDate", "Tagged", "Form",
+              "Pages", "Encrypted", "Page size", "File size",
+              "Optimized", "PDF version" )
+    re <- sprintf("^(%s)",
+                  paste(sprintf("%-16s", sprintf("%s:", tags)),
+                        collapse = "|"))
+    lines <- readLines(outfile, warn = FALSE)
+    ind <- grepl(re, lines)
+    tags <- sub(": *", "", substring(lines[ind], 1L, 16L))
+    info <- split(sub(re, "", lines), cumsum(ind))
+    names(info) <- tags
+    fmt <- "%a %b %d %X %Y"
+    if(!is.null(d <- info$CreationDate))
+        info$CreationDate <- strptime(d, fmt)
+    if(!is.null(d <- info$ModDate))
+        info$ModDate <- strptime(d, fmt)
+    if(!is.null(p <- info$Pages))
+        info$Pages <- as.integer(p)
+    info
+}
