@@ -1,3 +1,8 @@
+2013-07-10  Ingo Feinerer <feinerer@logic.at>
+
+	* R/reader.R (readPDF): Use tm:::pdfinfo() (which needs the pdfinfo
+	command line tool) instead of tools:::pdf_info().
+
 2013-04-11  Ingo Feinerer <feinerer@logic.at>
 
 	* R/transform.R (removeWords): Use PCRE UCP to use Unicode properties
